src/test/ui/feature-gates/feature-gate-extern_absolute_paths.stderr
error[E0432]: unresolved import `core`
  --> $DIR/feature-gate-extern_absolute_paths.rs:1:5
   |
LL | use core::default;
   |     ^^^^ maybe a missing crate `core`?

error[E0425]: cannot find function, tuple struct or tuple variant `Default` in `core::default`
  --> $DIR/feature-gate-extern_absolute_paths.rs:4:34
   |
LL |     let _: u8 = ::core::default::Default();
   |                                  ^^^^^^^ not found in `core::default`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
